--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <section class="section section-light">
+    <section class="section section-Dark">
         <h2>About Myself</h2>
         <p>
             My name is arshit sutariya. i am from surat. i am studdying in Information Technology.
